Added a simple form

--- a/web-news/src/app/article-creation-form/article-creation-form.component.html
+++ b/web-news/src/app/article-creation-form/article-creation-form.component.html
@@ -2,14 +2,25 @@
   <h2> Add-Article-Form </h2>
   
   <form #addForm="ngForm">
-	    <!-- <div class="form-group">
-	      <label for="emailFrom">From:</label>
-	      <input type="text" id="emailFrom" name="emailFrom" #emailFrom="ngModel" class="form-control" 
+	    <div class="form-group">
+	      <label for="addTitle">Title</label>
+	      <input type="text" id="addTitle" name="addTitle" #addTitle="ngModel"  
+	      			 [(ngModel)]="article.title"
+	      			 required pattern="^.{10,50}$">
+	      <br>
+	      <!-- <p *ngIf="!addTitle.valid && !addTitle['pristine']" class="red-font"> "From:" needs to be a mail!</p> -->
+	    </div>
+
+
+	    <!-- 
+	    <div class="form-group">
+	      <label for="addTitle">From:</label>
+	      <input type="text" id="addTitle" name="addTitle" #addTitle="ngModel" class="form-control" 
 	      			 [(ngModel)]="email.from"
 	      			 required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}"
-	      			 [ngClass]="emailFrom.touched ? (emailFrom.valid && !emailFrom['pristine'] ? 'green-border': 'yellow-border') : ''">
+	      			 [ngClass]="addTitle.touched ? (addTitle.valid && !addTitle['pristine'] ? 'green-border': 'yellow-border') : ''">
 	      <br>
-	      <p *ngIf="!emailFrom.valid && !emailFrom['pristine']" class="red-font"> "From:" needs to be a mail!</p>
+	      <p *ngIf="!addTitle.valid && !addTitle['pristine']" class="red-font"> "From:" needs to be a mail!</p>
 	    </div>
 
 	    <div class="form-group">
