--- a/web-news/src/app/app.component.html
+++ b/web-news/src/app/app.component.html
@@ -1,5 +1,20 @@
 <div>HomePage Works!</div>
 
-<app-article-creation-form></app-article-creation-form>
+<button class="btn btn-primary btn-sm mr-1" 
+        [routerLink]="['/edit/']">
+      Edit
+</button>
+
+
+<button class="btn btn-primary btn-sm mr-1" 
+        [routerLink]="['/login/']">
+      Login
+</button>
+
+<button class="btn btn-primary btn-sm mr-1" 
+        [routerLink]="['/create/']">
+      Create
+</button>
+
 
 <router-outlet></router-outlet>
