--- a/web-news/src/app/article-edit-form/article-edit-form.component.html
+++ b/web-news/src/app/article-edit-form/article-edit-form.component.html
@@ -4,7 +4,8 @@
   <form #editForm="ngForm">
 	    <div class="form-group">
 	      <label for="editTitle">Title</label>
-	      <input type="text" id="editTitle" name="editTitle" #editTitle="ngModel"  
+	      <br><br>
+	      <input type="text" id="editTitle" name="editTitle" #editTitle="ngModel"  class="all-forms" 
 	      			 [(ngModel)]="article.title"
 	      			 required [ngClass]="editTitle.touched ? (editTitle.valid && !editTitle['pristine'] ? '' : 'red-bg') : ''">
 	      <br><br>
@@ -12,13 +13,16 @@
 
 	    <div class="form-group">
 	      <label for="editSubtitle">Subtitle</label>
-	      <input type="text" id="editSubtitle" name="editSubtitle" #editSubtitle="ngModel" [(ngModel)]="article.subtitle" >
+	      <br><br>
+	      <input type="text" id="editSubtitle" name="editSubtitle" #editSubtitle="ngModel" [(ngModel)]="article.subtitle" 
+	      class="all-forms">
 	      <br><br>
 	    </div>
 
 	    <div class="form-group">
 	      <label for="editCategory">Category</label>
-		  <select [(ngModel)]="article.category">
+	      <br><br>
+		  <select [(ngModel)]="article.category" class="all-forms">
 			  <option value="National">National</option>
 			  <option value="Economy">Economy</option>
 			  <option value="Sports">Sports</option>
@@ -30,7 +34,8 @@
 
 	    <div class="form-group">
 	      <label for="editAbstract">Abstract</label>
-	      <input type="text" id="Abstract" name="Abstract" #editAbstract="ngModel"  
+	      <br><br>
+	      <input type="text" id="Abstract" name="Abstract" #editAbstract="ngModel" class="all-forms" 
 	      			 [(ngModel)]="article.abstract"
 	      			 required [ngClass]="editAbstract.touched ? (editAbstract.valid && !editAbstract['pristine'] ? '' : 'red-bg') : ''">
 	    <br><br>
@@ -38,7 +43,8 @@
 
 	    <div class="form-group">
 	      <label for="editBody">Body</label>
-	      <input type="text" id="editBody" name="editBody" #editBody="ngModel" [(ngModel)]="article.body">
+	      <br><br>
+	      <input type="text" class="body-form" id="editBody" name="editBody" #editBody="ngModel" [(ngModel)]="article.body">
 	      <br><br>
 	      <!-- <p *ngIf="!editTitle.valid && !editTitle['pristine']" class="red-font"> "From:" needs to be a mail!</p> -->
 	    </div>
