--- a/web-news/src/app/login-form/login-form.component.html
+++ b/web-news/src/app/login-form/login-form.component.html
@@ -1,26 +1,29 @@
 <!-- login.component.html -->
 <div class="container mt-4">
-    <div class="row justify-content-end">
-      <div class="col-md-2">
-        <ng-container *ngIf="isLoggedIn; else loginForm">
-          <p>Welcome, {{ this.username }}!</p>
-          <button class="btn btn-danger" (click)="logOut()">Log Out</button>
-        </ng-container>
-        <ng-template #loginForm>
-          <form (ngSubmit)="submit()" class="form">
-            <div class="form-group">
+  <div class="row justify-content-end">
+    <div class="col-md-6"> <!-- Increase the column width for a larger input field -->
+      <ng-container *ngIf="isLoggedIn; else loginForm">
+        <p>Welcome, {{ this.username }}!</p>
+        <button class="btn btn-danger" (click)="logOut()">Log Out</button>
+      </ng-container>
+      <ng-template #loginForm>
+        <form (ngSubmit)="submit()" class="form">
+          <div class="form-row align-items-center">
+            <div class="col-md-4 mb-2"> <!-- Adjust the column width and margin as needed -->
               <label for="username">Username</label>
               <input type="text" id="username" class="form-control" [(ngModel)]="username" name="username" required />
             </div>
-            <div class="form-group">
+            <div class="col-md-4 mb-2"> <!-- Adjust the column width and margin as needed -->
               <label for="password">Password</label>
               <input type="password" id="password" class="form-control" [(ngModel)]="password" name="password" required />
             </div>
-            <div *ngIf="loginError" class="alert alert-danger">Invalid username or password.</div>
-            <button type="submit" class="btn btn-primary mt-1">Log In</button>
-          </form>
-        </ng-template>
-      </div>
+            <div class="col-md-4 mb-2"> <!-- Adjust the column width and margin as needed -->
+              <button type="submit" class="btn btn-primary btn-block">Log In</button>
+            </div>
+          </div>
+          <div *ngIf="loginError" class="alert alert-danger">Invalid username or password.</div>
+        </form>
+      </ng-template>
     </div>
   </div>
-  
+</div>
