--- a/web-news/src/app/app.component.html
+++ b/web-news/src/app/app.component.html
@@ -1,6 +1,7 @@
-
-
-
+<button class="btn btn-primary btn-sm mr-1" 
+        [routerLink]="['/main/']">
+      Main
+</button>
 
 <button class="btn btn-primary btn-sm mr-1" 
         [routerLink]="['/edit/']">
@@ -18,7 +19,7 @@
       Create
 </button>
 
-<app-mainpage></app-mainpage>
+
 
 
 <router-outlet></router-outlet>
