--- a/web-news/src/app/app.component.html
+++ b/web-news/src/app/app.component.html
@@ -1,5 +1,5 @@
 <button class="btn btn-primary btn-sm mr-1" 
-        [routerLink]="['/main/']">
+        [routerLink]="['/home/']">
       Main
 </button>
 <router-outlet></router-outlet>
