--- a/web-news/src/app/article-creation-form/article-creation-form.component.css
+++ b/web-news/src/app/article-creation-form/article-creation-form.component.css
@@ -1,3 +1,39 @@
 .red-bg {
 	background-color: red;
+	width: 90%;
+}
+
+.body-form {
+  width: 100%;
+  padding: 50px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.all-forms{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+/*  width: 90%;*/
+}
+
+.form-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: black;
+  color: #fff;
+  border: none;
+  font-weight: bold;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 8px;
 }
