--- a/web-news/src/app/mainpage/mainpage.component.html
+++ b/web-news/src/app/mainpage/mainpage.component.html
@@ -38,7 +38,7 @@
             <a>International</a>
             <a>Sports</a>
             <a>Economy</a>
-            <app-login-form></app-login-form>
+            <a class="noHover"><app-login-form></app-login-form></a>
             <a href="javascript:void(0);" class="icon" (click)="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -64,22 +64,23 @@
         <!--list of articles-->
             <div class="container">
                 <div class="row">
-                    <div *ngFor="let article of articleList" class="col-sm">
+                    <div *ngFor="let article of articleList" class="col-sm" >
                         <mat-card class="example-card">
                             <mat-card-header>
-                            <div mat-card-avatar class="example-header-image"></div>
+                            
                             <mat-card-title>{{article.title}}</mat-card-title>
                             <mat-card-subtitle>{{article.subtitle}}</mat-card-subtitle>
                             </mat-card-header>
-                            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                            <img mat-card-image [src]="'data:' + article.image_media_type + ';base64,' +
+                            article.image_data ">
                             <mat-card-content>
-                            <p>
-                                {{article.abstract}}
+                            <p innerHTML="article.abstract">
+                                
                             </p>
                             </mat-card-content>
                             <mat-card-actions>
-                            <button mat-button>Like</button>
-                            <button mat-button>Share</button>
+                            <button mat-button (click)="openArticle(article)">Read</button>
+                            
                             <button *ngIf="isLoggedIn" mat-button (click)="edit(article.id)">Edit</button>
                             <button *ngIf ="isLoggedIn" (click)="removeArticle(article)">Remove</button>
                             </mat-card-actions>
