--- a/web-news/src/app/article-creation-form/article-creation-form.component.html
+++ b/web-news/src/app/article-creation-form/article-creation-form.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <h2> Add-Article-Form </h2>
+  <br>
+  <h2> Create an Article </h2>
   
   <form #addForm="ngForm">
 	    <div class="form-group">
@@ -67,6 +68,7 @@
  -->
   </form>
   <br>
+  <button class="form-button" [routerLink]="['/home/']">Go Back</button>
   <br>
   
 </div>
