--- a/web-news/src/app/mainpage/mainpage.component.html
+++ b/web-news/src/app/mainpage/mainpage.component.html
@@ -42,11 +42,13 @@
             <a href="javascript:void(0);" class="icon" (click)="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
-        </div> 
+        </div>
+            
 
 
 
             <div class="container">
+            <br>
             <!-- Search Bar -->
             <div class="row">
                 <div class="col-md-9">
@@ -56,10 +58,11 @@
                 </div>
                 <div class="col-md-3">
                 <button mat-button class="search-button">Search</button>
+                <button *ngIf="isLoggedIn" class="btn btn-dark" [routerLink]="['/create/']">Create Article</button>
                 </div>
             </div>
-
-
+        <br>
+        <br>
 
         <!--list of articles-->
             <div class="container">
