--- a/web-news/src/app/article-details/article-details.component.css
+++ b/web-news/src/app/article-details/article-details.component.css
@@ -1,6 +1,7 @@
 img {
     
-    width:50vw;
+    max-width:50vw;
+    max-height:40vh;
     display:block;
 }
 
@@ -8,7 +9,26 @@ div{
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    height: 100vh; /* Adjust to desired height */
+    
     flex-direction:column;
   
 }
+
+h1 {
+    margin-top:10vh;
+}
+
+.image-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .image-container img {
+    max-width: 100%;
+  }
+  
+  .text-container {
+    width: 60vw; /* Set the width to 80% of the viewport width */
+    text-align: center; /* Center-align the text within the container */
+  }
