--- a/web-news/src/app/mainpage/mainpage.component.html
+++ b/web-news/src/app/mainpage/mainpage.component.html
@@ -38,10 +38,13 @@
             <a>International</a>
             <a>Sports</a>
             <a>Economy</a>
-            <a class="noHover"><app-login-form></app-login-form></a>
+
+            <a class="noHover col-md-4 float-right"><app-login-form></app-login-form></a>
             <a href="javascript:void(0);" class="icon" (click)="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+
+            
         </div>
             
 
@@ -71,10 +74,10 @@
                         <mat-card class="example-card">
                             <mat-card-header>
                             
-                            <mat-card-title>{{article.title}}</mat-card-title>
+                            <mat-card-title (click)="openArticle(article)">{{article.title}}</mat-card-title>
                             <mat-card-subtitle>{{article.subtitle}}</mat-card-subtitle>
                             </mat-card-header>
-                            <img mat-card-image [src]="'data:' + article.image_media_type + ';base64,' +
+                            <img mat-card-image (click)="openArticle(article)" [src]="'data:' + article.image_media_type + ';base64,' +
                             article.image_data ">
                             <mat-card-content>
                             <p innerHTML="article.abstract">
