Added the add file button but does nothing with it

--- a/web-news/src/app/article-edit-form/article-edit-form.component.html
+++ b/web-news/src/app/article-edit-form/article-edit-form.component.html
@@ -48,6 +48,11 @@
 	    </div>
 	    <div *ngIf="submitDone" class="alert alert-success">Change Done!</div>
 
+	     <div class="form-group">
+		  <label for="image">Upload New Image</label>
+		  <input type="file" id="image" name="image" (change)="onFileSelected($event)" accept="image/*">
+		</div>
+
 	    <button type="submit" class="form-button" (click)="editArticle()" [disabled]="editForm.invalid">Send</button>
 	
     <!-- <button type="submit" class="btn btn-primary" (click)="sendEmail()" [disabled]="editForm.invalid">Send</button>
