--- a/web-news/src/app/article-creation-form/article-creation-form.component.html
+++ b/web-news/src/app/article-creation-form/article-creation-form.component.html
@@ -51,22 +51,15 @@
 
 	    <div *ngIf="submitDone" class="alert alert-success">Change Done!</div>
 
+	    <div class="form-group">
+		  <label for="image">Upload Image</label>
+		  <input type="file" id="image" name="image" (change)="onFileSelected($event)" accept="image/*">
+		</div>
+
 	    <button type="submit" class="form-button" (click)="addArticle()" [disabled]="addForm.invalid">Send</button>
 	
-    <!-- <button type="submit" class="btn btn-primary" (click)="sendEmail()" [disabled]="addForm.invalid">Send</button>
-    <br>
-    <br>
-    <button type="submit" class="btn btn-primary" (click)="clear()">Reset</button>
-    <br>
-    <p *ngIf="showMessage" class="red-font"> uh oh!</p>
-    <p *ngIf="showMessage" class="red-font"> {{this.email.from.valid}} </p>
-    <p *ngIf="showMessage" class="red-font"> {{this.email.to.valid}} </p>
-    <p *ngIf="showMessage" class="red-font"> {{this.email.subject.valid}} </p>
-    <p *ngIf="showMessage" class="red-font"> {{this.email.body.valid}} </p>
-    <p *ngIf="showMessage" class="red-font"> {{this.email.from.valid && this.email.to.valid && this.email.body.valid}} </p>
-
- -->
   </form>
+  
   <br>
   <button class="form-button" [routerLink]="['/home/']">Go Back</button>
   <br>
