--- a/web-news/src/app/mainpage/mainpage.component.html
+++ b/web-news/src/app/mainpage/mainpage.component.html
@@ -53,7 +53,7 @@
             <div class="row">
                 <div class="col-md-9">
                 <div class="search-container">
-                    <input type="text" placeholder="Search..." class="search-input">
+                    <input type="text" placeholder="Search..." class="search-input" [(ngModel)]="term">
                 </div>
                 </div>
                 <div class="col-md-3">
@@ -67,7 +67,8 @@
         <!--list of articles-->
             <div class="container">
                 <div class="row">
-                    <div *ngFor="let article of articleList" class="col-sm" >
+                    <div *ngFor="let article of articleList | textfilter:term" class="col-sm" >
+                      
                         <mat-card class="example-card">
                             <mat-card-header>
                             
