--- a/web-news/src/app/mainpage/mainpage.component.html
+++ b/web-news/src/app/mainpage/mainpage.component.html
@@ -33,11 +33,13 @@
 
         <div class="topnav" id="myTopnav">
             <a class="header-link active">EIT Newspaper</a>
-            <a>All</a>
-            <a>National</a>
-            <a>International</a>
-            <a>Sports</a>
-            <a>Economy</a>
+            <a class="header-link" (click)="setCategoryFilter('all')">All</a>
+            <a (click)="setCategoryFilter('National')">National</a>
+            <a (click)="setCategoryFilter('Economy')">Economy</a>
+            <a (click)="setCategoryFilter('Sports')">Sports</a>
+            <a (click)="setCategoryFilter('Technology')">Technology</a>
+            
+            
 
             <a class="noHover col-md-4 float-right"><app-login-form></app-login-form></a>
             <a href="javascript:void(0);" class="icon" (click)="myFunction()">
@@ -70,7 +72,7 @@
         <!--list of articles-->
             <div class="container">
                 <div class="row">
-                    <div *ngFor="let article of articleList | textfilter:term" class="col-sm" >
+                    <div *ngFor="let article of filteredArticles | textfilter:term" class="col-sm" >
                       
                         <mat-card class="example-card">
                             <mat-card-header>
