--- a/web-news/src/app/mainpage/mainpage.component.html
+++ b/web-news/src/app/mainpage/mainpage.component.html
@@ -31,22 +31,21 @@
         <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+        <h1 class="header-link chomsky">EIT Newspaper</h1>
+        <h2 class="sub-header-link chomsky">A newspaper by the Technical University of Madrid></h2>
         <div class="topnav" id="myTopnav">
-            <a class="header-link active">EIT Newspaper</a>
-            <a class="header-link" (click)="setCategoryFilter('all')">All</a>
-            <a (click)="setCategoryFilter('National')">National</a>
-            <a (click)="setCategoryFilter('Economy')">Economy</a>
-            <a (click)="setCategoryFilter('Sports')">Sports</a>
-            <a (click)="setCategoryFilter('Technology')">Technology</a>
- 
-            
-            <a class="noHover"><app-login-form></app-login-form></a>
-            <a href="javascript:void(0);" class="icon" (click)="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
-
-            
+          
+          <a class="nav-item" (click)="setCategoryFilter('all')">All</a>
+          <a class="nav-item" (click)="setCategoryFilter('National')">National</a>
+          <a class="nav-item" (click)="setCategoryFilter('Economy')">Economy</a>
+          <a class="nav-item" (click)="setCategoryFilter('Sports')">Sports</a>
+          <a class="nav-item" (click)="setCategoryFilter('Technology')">Technology</a>
+          <a class="noHover"><app-login-form></app-login-form></a>
+          <a href="javascript:void(0);" class="icon" (click)="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
         </div>
+        
             
 
 
@@ -72,7 +71,6 @@
             <div class="container">
                 <div class="row">
                     <div *ngFor="let article of filteredArticles | textfilter:term" class="col-sm" >
-                    <div *ngFor="let article of filteredArticles | textfilter:term" class="col-sm" >
                       
                         <mat-card class="example-card">
                             <mat-card-header>
@@ -87,11 +85,10 @@
                                 
                             </p>
                             </mat-card-content>
-                            <mat-card-actions>
-                            <button mat-button (click)="openArticle(article)">Read</button>
-                            
-                            <button *ngIf="isLoggedIn" mat-button (click)="edit(article.id)">Edit</button>
-                            <button *ngIf ="isLoggedIn" mat-button (click)="removeArticle(article)">Remove</button>
+                            <mat-card-actions class="button-container">
+                              <button mat-button (click)="openArticle(article)" class="read-button">Read</button>
+                              <button *ngIf="isLoggedIn" mat-button (click)="edit(article.id)" class="edit-button">Edit</button>
+                              <button *ngIf="isLoggedIn" mat-button (click)="removeArticle(article)" class="remove-button">Remove</button>
                             </mat-card-actions>
                         </mat-card>
                     </div>
