--- a/web-news/src/app/mainpage/mainpage.component.html
+++ b/web-news/src/app/mainpage/mainpage.component.html
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <h1 class="header-link chomsky">EIT Newspaper</h1>
-        <h2 class="sub-header-link chomsky">A newspaper by the Technical University of Madrid></h2>
+        <h2 class="sub-header-link chomsky">A newspaper by the Technical University of Madrid</h2>
         <div class="topnav" id="myTopnav">
           
           <a class="nav-item" (click)="setCategoryFilter('all')">All</a>
