--- a/web-news/src/app/login-form/login-form.component.html
+++ b/web-news/src/app/login-form/login-form.component.html
@@ -1,13 +1,17 @@
-<div class="container mt-4">
+<div class="container mt-4 display-flex">
   <div class="row">
     <div class="col-md-12 float-right" >
-      <ng-container *ngIf="isLoggedIn; else loginForm" className="logout">
-        <p>Welcome, {{ this.username }}!</p>
-        <button class="btn btn-danger" (click)="logOut()">Log Out</button>
+      <ng-container *ngIf="isLoggedIn; else loginForm" className="logout" class="form-row align-items-center">
+        <div class="display-flex flex-row align-items-center mb-2 float-right">
+          <p>Welcome, {{ this.username }}!</p>
+        
+          <button class="btn btn-danger ml-2" (click)="logOut()">Log Out</button>
+        </div>
+        
       </ng-container>
       <ng-template #loginForm>
       <form (ngSubmit)="submit()" class="form">
-        <div class="form-row align-items-center">
+        <div class="form-row align-items-center float-right">
           <div class="col-md-4 mb-2">
             
             <input type="text" placeholder="Username" id="username" class="form-control" [(ngModel)]="username" name="username" required />
@@ -20,7 +24,7 @@
             <button type="submit" class="btn btn-primary btn-block">Log In</button>
           </div>
         </div>
-        <div *ngIf="loginError" class="col-md-12 alert alert-danger">Invalid username or password.</div>
+        <div *ngIf="loginError" class="col-md-4 alert alert-danger">Invalid username or password.</div>
       </form>
       </ng-template>
     </div>
