--- a/web-news/src/app/article-creation-form/article-creation-form.component.html
+++ b/web-news/src/app/article-creation-form/article-creation-form.component.html
@@ -8,7 +8,7 @@
 	      
 	      <input type="text" id="addTitle" name="addTitle" #addTitle="ngModel"  class="all-forms"
 	      			 [(ngModel)]="article.title"
-	      			 required [ngClass]="addTitle.touched ? (addTitle.valid && !addTitle['pristine'] ? '' : 'red-bg') : ''">
+	      			 required [ngClass]="addTitle.touched ? (addTitle.valid ? '' : 'alert alert-danger') : ''">
 	      <br><br>
 	    </div>
 
@@ -37,7 +37,7 @@
 	      
 	      <input type="text" id="Abstract" name="Abstract" #addAbstract="ngModel"  class="all-forms"
 	      			 [(ngModel)]="article.abstract"
-	      			 required [ngClass]="addAbstract.touched ? (addAbstract.valid && !addAbstract['pristine'] ? '' : 'red-bg') : ''">
+	      			 required [ngClass]="addAbstract.touched ? (addAbstract.valid ? '' : 'alert alert-danger') : ''">
 	    <br><br>
 	    </div>
 
